tools/tests/errors/surf_lib_10.ki
# A reversed range in a character class is invalid.
var r = import("regex")
discard r.compile("[z-a]")
